---
source: compiler-core/src/erlang/tests/let_assert.rs
expression: "\npub fn expect(value, message) {\n  let assert Ok(inner) = value as message\n  inner\n}\n"
---
----- SOURCE CODE

pub fn expect(value, message) {
  let assert Ok(inner) = value as message
  inner
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([expect/2]).

-spec expect({ok, L} | {error, any()}, binary()) -> L.
expect(Value, Message) ->
    case Value of
        {ok, Inner} ->
            Inner;

        _value ->
            erlang:error(#{
                gleam_error => let_assert,
                message => Message,
                file => ~"project/test/my/mod.gleam",
                module => ~"my/mod",
                function => ~"expect",
                line => 3,
                value => _value,
                start => 35,
                'end' => 63,
                pattern_start => 46,
                pattern_end => 55
            })
    end.
